--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <li>
             <img src="./img/img1.jpg" alt="Игорь Демьяненко" width="270" height="260" />
             <h3>Игорь Демьяненко</h3>
-            <p lang="en"Product Designer</p>
+            <p lang="en">Product Designer</p>
           </li>
           <li>
             <img src="./img/img2.jpg" alt="Ольга Репина" width="270" height="260" />
