--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html" aria-label="логотип вэб-студии">
-          <img src="./img/logo.png" alt="логотип вэб-студии" width="145" height="31" />
-        </a>
+        <a href="./index.html" aria-label="логотип вэб-студии">WebStudio</a>
         <ul>
           <li>
             <a href="">Студия</a>
@@ -101,9 +99,7 @@
     </main>
 
     <footer>
-      <a href="./index.html" aria-label="логотип вэб-студии">
-        <img src="./img/logo.png" alt="логотип вэб-студии" width="145" height="31" />
-      </a>
+      <a href="./index.html" aria-label="логотип вэб-студии">WebStudio</a>
       <address>
         <ul>
           <li><a href="https://goo.gl/maps/aFKf9Q2qraXxwTez7">г. Киев, пр-т Леси Украинки, 26</a></li>
